kuber-test/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-test
  labels:
    app: kuber-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kuber-test
  template:
    metadata:
      labels:
        app: kuber-test
    spec:
      containers:
        - name: kuber-test
          image: apb12/kuber-test:1.1.2
          ports:
            - containerPort: 8080
