kuber-test/deploymentAdmin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-admin
  labels:
    app: spring-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-admin
  template:
    metadata:
      labels:
        app: spring-admin
    spec:
      containers:
        - name: spring-admin
          image: apb12/spring-admin:1.0.0
          ports:
            - containerPort: 8080
