kuber-test/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kuber-test
spec:
  selector:
    app: kuber-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
